--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -5,8 +5,6 @@
               android:orientation="vertical"
               tools:context="com.lbcinternal.sensemble.activities.DetailActivity">
 
-    <include layout="@layout/feed_entry_title"/>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,13 +15,23 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#d4c6d9"
+                android:text="23 Jul"
+                android:textSize="14sp"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"/>
+
+            <TextView
                 android:id="@+id/body"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="250dp"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingTop="8dp"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:textColor="#3b3d44"/>
 
