--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -67,10 +67,11 @@
                         android:textColor="#3b3d44"/>
 
                     <TextView
+                        android:id="@+id/comments_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#bcbcbc"
-                        android:text="6"/>
+                        tools:text="6"/>
 
                 </LinearLayout>
 
