--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -20,6 +20,7 @@
             android:layout_toRightOf="@+id/avatar"/>
 
         <TextView
+            android:id="@+id/message"
             android:text="@string/sample_message"
             style="@style/message"
             android:layout_below="@+id/name"
