--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -16,6 +16,7 @@
             android:id="@+id/name"
             android:text="Hayley Lewis"
             style="@style/ContactName"
+            android:textColor="#000000"
             android:layout_alignTop="@+id/avatar"
             android:layout_toRightOf="@+id/avatar"/>
 
@@ -23,6 +24,7 @@
             android:id="@+id/message"
             android:text="@string/sample_message"
             style="@style/message"
+            android:textColor="#b3000000"
             android:maxLines="2"
             android:ellipsize="end"
             android:layout_below="@+id/name"
