--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -33,7 +33,8 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="8dp"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                android:textColor="#3b3d44"/>
+                android:textColor="#3b3d44"
+                android:autoLink="all"/>
 
             <LinearLayout
                 android:id="@+id/feedback_container"
