--- a/app/src/main/res/layout/fragment_post_idea.xml
+++ b/app/src/main/res/layout/fragment_post_idea.xml
@@ -45,6 +45,7 @@
         android:textCursorDrawable="@null"/>
 
     <CheckBox
+        android:id="@+id/anonymous"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:gravity="center_vertical"
